--- a/packages/docs/src/examples/slot.less
+++ b/packages/docs/src/examples/slot.less
@@ -1,4 +1,3 @@
-
 .custom-resize {
   width: 6px;
   height: 6px;
@@ -11,3 +10,10 @@
   color: #0ec3b8;
 }
 
+.drager-text {
+  font-size: 30px;
+}
+
+.absolute {
+  position: absolute;
+}
