--- a/packages/editor/src/components/layout/info/Info.less
+++ b/packages/editor/src/components/layout/info/Info.less
@@ -1,4 +1,3 @@
-
 .es-layout-info {
   flex-shrink: 0;
   width: calc(var(--es-layout-aside-width) + 30px);
@@ -18,11 +17,13 @@
   overflow-y: auto;
   .el-row {
     margin-bottom: 10px;
-    .el-button-group, .el-checkbox-group {
+    .el-button-group,
+    .el-checkbox-group {
       display: inline-flex;
       width: 100%;
     }
-    .el-checkbox-group, .el-checkbox-button__inner {
+    .el-checkbox-group,
+    .el-checkbox-button__inner {
       width: 100%;
     }
     .el-color-picker.el-tooltip__trigger {
@@ -67,4 +68,3 @@
     }
   }
 }
-
