--- a/packages/editor/src/components/editor/GridRect.less
+++ b/packages/editor/src/components/editor/GridRect.less
@@ -1,6 +1,11 @@
 .grid-rect {
   width: 100%;
   height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  pointer-events: none;
   border-right: 1px solid var(--border-color);
   border-bottom: 1px solid var(--border-color);
 }
